<resources>
    <string name="app_name">Vector</string>
    <string name="field_number">Número</string>
    <string name="button_history">Histórico de Consulta</string>
    <string name="button_redefine">Redefinir Lista</string>
    <string name="button_verify">Verificar</string>

    <string name="error_bounds">Digite um número entre -197 e 197 para verificação</string>

    <string name="result_exist">existe</string>
    <string name="feedback_result_exist">existe: (%d + %d = %d)</string>
    <string name="result_not_exist">não existe</string>
    <string name="error_fetching_list">Erro ao buscar números, verifique sua conexão com a internet!</string>
    <string name="error_persistence">Erro na operação, tente novamente!</string>
    <string name="result_see_list">ver\nlista</string>
    <string name="result_title">RESULTADO</string>
    <string name="n_title">N</string>
    <string name="close">Fechar</string>
    <string name="back_button_text">&#60;</string>
    <string name="clear_history">Apagar</string>
    <string name="next_text">&#62;</string>
</resources>
