...
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/numberField"
                android:maxLength="4"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/box"
                android:inputType="numberSigned"
                android:layout_weight="1"
...
